--- a/package.json
+++ b/package.json
@@ -10,34 +10,32 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2",
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "papaparse": "^5.4.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-markercluster": "^4.1.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@tauri-apps/cli": "^2",
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^22.10.5",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.3",
-    "@types/leaflet": "^1.9.14",
-    "@types/papaparse": "^5.3.15",
     "@types/react-leaflet-markercluster": "^3.0.4",
-    "@eslint/js": "^9.9.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -46,6 +44,8 @@
     "globals": "^15.9.0",
     "prettier": "^3.4.2",
     "sass": "^1.83.0",
-    "typescript-eslint": "^8.0.1"
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^6.0.3"
   }
 }
